# trovacasa

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.example.yaml
.github/workflows/: pipeline.yml
ai-setup/: README.md  city-builder.md  config-builder.md  scoring-builder.md
docs/: apify-actors-input-reference.md  apify-actors-output-reference.md  scoring-enrichment-design.md
docs/superpowers/specs/: 2026-03-14-trovacasa-open-source-design.md
pipeline/: .env.example  pyproject.toml
pipeline/data/cities/: README.md
pipeline/data/cities/lecco/: metro.json  neighborhoods.json
pipeline/data/cities/milan/: metro.json  neighborhoods.json
pipeline/data/cities/rome/: metro.json  neighborhoods.json
pipeline/data/cities/varese/: metro.json  neighborhoods.json
pipeline/src/: config.py  db.py  dedup.py  gallery.py  main.py  models.py  report.py  run_tracker.py
pipeline/src/enrichment/: __init__.py  __main__.py  batch_extract.py  llm_extract.py
pipeline/src/scoring/: __init__.py  base.py  commute.py  freshness.py  livability.py  metro.py  neighborhood.py  pipeline.py  quality.py  registry.py  scam.py  transit.py
pipeline/src/scrapers/: __init__.py  apify_idealista_gallery.py  base.py  idealista.py  immobiliare.py
pipeline/src/telegram/: callback_handler.py  notify.py
pipeline/tests/: test_config.py  test_models.py  test_scoring.py  test_scrapers.py  test_transit.py
supabase/migrations/: 001_initial_schema.sql  002_gallery_fetched_at.sql  003_add_city_column.sql
web/: package-lock.json  package.json
web/src/: middleware.ts
(+25 files in other folders)
